[gd_scene load_steps=7 format=3 uid="uid://bnt2m3qffvni7"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_4xve4"]
[ext_resource type="PackedScene" uid="uid://bn683fa5lbvvl" path="res://Scenes/snake_segment.tscn" id="2_bo8v3"]
[ext_resource type="Texture2D" uid="uid://cwynx2gaxx1xs" path="res://Assests/bg.png" id="2_ro2b0"]
[ext_resource type="PackedScene" uid="uid://bgbmqirlbo0iw" path="res://Scenes/hud.tscn" id="3_e5fva"]
[ext_resource type="Texture2D" uid="uid://xl7ahs1vka2a" path="res://Assests/apple.png" id="5_wsokp"]
[ext_resource type="PackedScene" uid="uid://by6004ili01x5" path="res://Scenes/game_over_menu.tscn" id="6_8s17a"]

[node name="Main" type="Node2D"]
script = ExtResource("1_4xve4")
snake_scene = ExtResource("2_bo8v3")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(500, 550)
texture = ExtResource("2_ro2b0")

[node name="Hud" parent="." instance=ExtResource("3_e5fva")]

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Apple" type="Sprite2D" parent="."]
texture = ExtResource("5_wsokp")
offset = Vector2(25, 25)

[node name="GameOverMenu" parent="." instance=ExtResource("6_8s17a")]
process_mode = 2

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
